change the error anwser

--- a/eBook/14.2.md
+++ b/eBook/14.2.md
@@ -192,7 +192,7 @@ time.Sleep(1e9)
 
 练习 14.2： [blocking.go](exercises/chapter_14/blocking.go)
 
-解释为什么下边这个程序会导致 panic：所有的协程都休眠了 - 死锁！####把main看成一个协程，用通道out传输数据"2"时,并没有执行go f1(out),接受者并没有准备好，所以造成了deadlock。
+解释为什么下边这个程序会导致 panic：所有的协程都休眠了 - 死锁！####http://www.cnblogs.com/php-rearch/p/5962873.html
 
 ```go
 package main
