change get anwser message

--- a/eBook/14.2.md
+++ b/eBook/14.2.md
@@ -192,7 +192,7 @@ time.Sleep(1e9)
 
 练习 14.2： [blocking.go](exercises/chapter_14/blocking.go)
 
-解释为什么下边这个程序会导致 panic：所有的协程都休眠了 - 死锁！####http://www.cnblogs.com/php-rearch/p/5962873.html
+解释为什么下边这个程序会导致 panic：所有的协程都休眠了 - 死锁！[anwser](http://www.cnblogs.com/php-rearch/p/5962873.html)
 
 ```go
 package main
